Salesforce/Trailhead_FirstPlayGround/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Macaron_Flavor__c</fullName>
        <defaultValue>CASE(MONTH(TODAY()),1, &quot;Gingerbread&quot;,2, &quot;Strawberry&quot;,4, &quot;Chocolate&quot;,7, &quot;Raspberry&quot;,11, &quot;Pumpkin&quot;,12, &quot;Mint&quot;, &quot;Vanilla&quot;)</defaultValue>
        <globalPicklist>Flavors</globalPicklist>
        <label>Macaron Flavor</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shirt__c</fullName>
        <globalPicklist>Flavors</globalPicklist>
        <label>Shirt</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>qwer__c</fullName>
        <label>qwer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>